--- a/src/main/resources/EN.yml
+++ b/src/main/resources/EN.yml
@@ -1,5 +1,7 @@
 global:
   no-permissions: "&4You don't have enough permissions to do this."
+  only-players: "&cOnly players can do this."
+  target-not-online: "&cThe player you provided is not online"
 commands:
   use-help: "&cPlease use %command% for help."
   helpmenu:
@@ -13,3 +15,7 @@ commands:
     data:
       save-success: "&aThe data has been saved."
       save-failed: "&cSomething went wrong saving the data."
+  world:
+    usage: "&cPlease use /world (world) [player] to teleport."
+    no-world: "&cThe world %world% does not exist."
+    teleported: "&aYou got teleported to the world %world%."
