--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
     <description>Just an awesome KitPvP plugin</description>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
@@ -42,6 +44,22 @@
             <artifactId>spigot</artifactId>
             <version>1.18.2-R0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>2.0.0-alpha6</version>
+            <scope>compile</scope>
+            <type>jar</type>
+        </dependency>
+
 
         <!--<dependency>
             <groupId>org.bstats</groupId>
@@ -88,17 +106,23 @@
                 </configuration>
             </plugin>
 
-            <!--<plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <configuration>
-                    <relocations>
+                    <!--<relocations>
                         <relocation>
                             <pattern>org.bstats</pattern>
                             <shadedPattern>dev.almostsomeone.premiumpvp.common.http</shadedPattern>
                         </relocation>
-                    </relocations>
+                    </relocations>-->
+                    <artifactSet>
+                        <includes>
+                            <include>com.zaxxer:*:*:*</include>
+                            <include>org.slf4j:*:*:*</include>
+                        </includes>
+                    </artifactSet>
                 </configuration>
                 <executions>
                     <execution>
@@ -108,7 +132,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 </project>
