Error Prevention and Cleanup

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,7 @@ website: ${project.url}
 description: ${project.description}
 author: AlmostSomeone
 softdepend: [PlaceholderAPI]
+
+commands:
+  kitpvp:
+    description: test
