--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,19 +11,26 @@ version: 0.1
 update-notify: true
 
 # Languages supported: EN, NL
+# Please keep in mind that this language setting only affects the messages in the "messages" folder.
+# Things like scoreboards, signs and other things are customizable through their own configurations.
 language: EN
 
 # Configure this part when you wish to save data like stats, kits, guilds, cosmetics in MySQL
 # If not enabled, the data will be stored in local JSON files in the "data" folder.
 # There is a migrate command if you wish to migrate your local data to MySQL later on.
-mysql:
-  enabled: false
+
+# We support different methods of storing data. DO NOT TOUCH THIS UNLESS YOU KNOW WHAT YOU ARE DOING.
+# - SQLite: This is the default local Database.sql file and is recommended if you don't need to retrieve data from other places.
+# - MySQL: This is the recommended way of storing data if you need to retrieve data from other places like multiple servers or websites.
+storage:
+  method: mysql
   host: localhost
   port: 3306
-  database: kitpvp
-  table-prefix: premiumpvp
-  username: username
-  password: password
+  username: root
+  password: root
+  database: premiumpvp
+  table: data
+  prefix: ppvp
 
 # Configure how players can participate in KitPvP
 # I'd recommend leaving this as it is if you only have this gamemode on the server.
