--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -157,6 +157,7 @@ performance:
   caching:
     read-on-join: false # If you set this to true, the plugin will (re)cache the player's data when they join. Useful for Bungeecord configurations
     write-on-leave: false # If you set this to true, the plugin will write the player's data to the database when they leave. Useful for Bungeecord configurations
+    remove-on-leave: false # If you set this to true, the plugin will remove the player's data from the cache when they leave. Useful for Bungeecord configurations
   auto-save:
     enabled: true # If you set this to true, the plugin will automatically save the data
     interval: 300 # The interval in seconds.
