--- a/src/main/resources/settings.yml
+++ b/src/main/resources/settings.yml
@@ -115,17 +115,17 @@ commands:
     permission: # The permission you need to execute this command
       enabled: true # If you need the permission, set to "false" to make it so everyone can do this. (Not recommended for this command)
       name: premiumpvp.command.world # The permission they would need to execute this command.
-#  coins:
-#    enabled: true
-#    name: coins
-#    description: "See how many coins you have"
-#    aliases:
-#      - coin
-#      - balance
-#      - bal
-#    permission:
-#      enabled: false
-#      name: premiumpvp.command.coins
+  coins:
+    enabled: true
+    name: coins
+    description: "See how many coins you have"
+    aliases:
+      - coin
+      - balance
+      - bal
+    permission:
+      enabled: false
+      name: premiumpvp.command.coins
 #  guild:
 #    enabled: true
 #    name: guild
